--- a/notebooks/explore_benchmark_datasets.ipynb
+++ b/notebooks/explore_benchmark_datasets.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,11 +20,160 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# List Datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mInspec\u001b[m\u001b[m      \u001b[34mSemEval2017\u001b[m\u001b[m\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls ../data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# List Dataset Directories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mdocsutf8\u001b[m\u001b[m     \u001b[34mkeys\u001b[m\u001b[m         lan.txt      language.txt\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls ../data/Inspec/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "en-US\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat ../data/Inspec/lan.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "english\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat ../data/Inspec/language.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Read Sample Text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluation of existing and new feature recognition algorithms. 2. Experimental\r\n",
+      "\tresults\r",
+      "\r\n",
+      "For pt.1 see ibid., p.839-851. This is the second of two papers investigating\r\n",
+      "\tthe performance of general-purpose feature detection techniques. The\r\n",
+      "\tfirst paper describes the development of a methodology to synthesize\r\n",
+      "\tpossible general feature detection face sets. Six algorithms resulting\r\n",
+      "\tfrom the synthesis have been designed and implemented on a SUN\r\n",
+      "\tWorkstation in C++ using ACIS as the geometric modelling system. In\r\n",
+      "\tthis paper, extensive tests and comparative analysis are conducted on\r\n",
+      "\tthe feature detection algorithms, using carefully selected components\r\n",
+      "\tfrom the public domain, mostly from the National Design Repository. The\r\n",
+      "\tresults show that the new and enhanced algorithms identify face sets\r\n",
+      "\tthat previously published algorithms cannot detect. The tests also show\r\n",
+      "\tthat each algorithm can detect, among other types, a certain type of\r\n",
+      "\tfeature that is unique to it. Hence, most of the algorithms discussed\r\n",
+      "\tin this paper would have to be combined to obtain complete coverage\r",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat ../data/Inspec/docsutf8/1100.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Read Sample Keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "feature recognition algorithms\r\n",
+      "general-purpose feature detection techniques\r\n",
+      "\tNational Design Repository\r\n",
+      "face sets\r\n",
+      "convex hull\r\n",
+      "concavity\r",
+      "\r\n",
+      "feature extraction\r\n",
+      "mechanical engineering\r",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat ../data/Inspec/keys/1100.key"
+   ]
   }
  ],
  "metadata": {
@@ -43,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
