Add evaluation modules for keyword extraction models. Implement EmbedRankTransformers model and ready to evaluate on datasets. Update requirements file. Update notebooks since conda environment has changed.

--- a/notebooks/testing_bert_vector_arithmetics.ipynb
+++ b/notebooks/testing_bert_vector_arithmetics.ipynb
@@ -1561,7 +1561,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:case_law] *",
+   "display_name": "Python [conda env:case_law]",
    "language": "python",
    "name": "conda-env-case_law-py"
   },
