--- a/notebooks/unsupervised_keyword_extraction_demo.ipynb
+++ b/notebooks/unsupervised_keyword_extraction_demo.ipynb
@@ -526,7 +526,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:case_law] *",
+   "display_name": "Python [conda env:case_law]",
    "language": "python",
    "name": "conda-env-case_law-py"
   },
